add readme. Add field 'numberOfPrimes' to response. Convert execution duration to millis.